--- a/index.ipynb
+++ b/index.ipynb
@@ -1080,7 +1080,8 @@
    ],
    "source": [
     "names_and_ranks = []\n",
-    "    for "
+    "    for index in names_and_ranks:\n",
+    "        "
    ]
   },
   {
