Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1081,7 +1081,7 @@
    "source": [
     "names_and_ranks = []\n",
     "    for index in names_and_ranks:\n",
-    "        names_and_ranks.append(f\")"
+    "        names_and_ranks.append(f\"{index)"
    ]
   },
   {
