Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,8 +1067,9 @@
    ],
    "source": [
     "names_and_ranks = []\n",
-    "    for index in names_and_ranks:\n",
-    "        names_and_ranks.append(f\"{index+1}. {city_names[index]})"
+    "for index in names_and_ranks:\n",
+    "    names_and_ranks.append(f\"{index+1}. {city_names[index]})\n",
+    "            "
    ]
   },
   {
