Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,15 +1053,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-6-31538de0488a>, line 2)",
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-7-8028dba2fb28>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-31538de0488a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for index in names_and_ranks:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-8028dba2fb28>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(f\"{index+1}. {city_names[index]})\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
@@ -1069,7 +1069,7 @@
     "names_and_ranks = []\n",
     "for index in names_and_ranks:\n",
     "    names_and_ranks.append(f\"{index+1}. {city_names[index]})\n",
-    "            "
+    "return names_and_ranks"
    ]
   },
   {
