--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,8 +1068,8 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in names_and_ranks:\n",
-    "    names_and_ranks.append(f\"{index+1}. {city_names[index]})\n",
-    "return names_and_ranks"
+    "    names_and_ranks.append(f\"{index+1}. {city_names[index]}\")\n",
+    "return names_and_rank"
    ]
   },
   {
