Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,23 +1053,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-7-8028dba2fb28>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-8028dba2fb28>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(f\"{index+1}. {city_names[index]})\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks = []\n",
     "for index in names_and_ranks:\n",
     "    names_and_ranks.append(f\"{index+1}. {city_names[index]}\")\n",
-    "return names_and_rank"
+    "names_and_ranks"
    ]
   },
   {
