Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1119,7 +1119,9 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "city_populations ="
+   ]
   },
   {
    "cell_type": "code",
