--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,7 +1122,7 @@
    "source": [
     "city_populations = []\n",
     "for index in city_indices:\n",
-    "    city_populations[index]"
+    "    city_populations.append(city_populations[index]['Popu']"
    ]
   },
   {
