Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2111,9 +2111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []\n",
-    "for city in city_indices:\n",
-    "    city_areas.append(cities[city]['Area'])"
+    "city_areas "
    ]
   },
   {
