--- a/index.ipynb
+++ b/index.ipynb
@@ -2112,7 +2112,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for in"
+    "for index in city_indices:\n",
+    "    city_areas."
    ]
   },
   {
