--- a/index.ipynb
+++ b/index.ipynb
@@ -2107,18 +2107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for index in city_indices:\n",
-    "    city_areas.append(cities[index])"
+    "    city_areas.append(cities[index]['Area'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
